tests/reference/ast_new-if1-db43586.stderr
syntax error: Token 'else' is unexpected here
  --> tests/parser/if1.py:27:1
   |
27 | else: a = b;
   | ^^^^ 
